--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find these file by Rao Chaudhri in app/views/pages/home.html.erb</p>
+<h1>Sample App</h1>
+<p>This is the home page <a href = "http://railstutorial.org/">Ruby on Rails Tutorial</a> sample application</p>
+
+
+
